# DTI-Reg

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Common.cmake  DTI-Reg-bms.h  DTI-Reg.cmake  DTI-Reg.cxx  DTI-Reg.xml  DTI-Reg_Config.h.in  DTI-Reg_Config_no_config.h.in  DTI-Reg_Config_with_config.h.in  DTIReg.cmake  README  README.md  SuperBuild.cmake
CMake/: CMakeCommonExternalDefinitions.cmake  CMakeEchoAllTargetProperties.cmake  FindExternalTools.cmake
DTI-Reg/: CMakeLists.txt  DTI-Reg-bms.h  DTI-Reg.cxx  DTI-Reg.xml  DTI-Reg_Computation.cxx  DTI-Reg_Computation.h  DTI-Reg_Config.h.in  DTI-Reg_Scalar.bms  DTI-Reg_Scalar_ANTS.bms  DTI-Reg_Scalar_BRAINS.bms
SuperBuild/: BatchMake-patch-cmd.cmake  BatchMakePatched-static-CMakeLists.txt  External_ANTs.cmake  External_BRAINSTools.cmake  External_BatchMake.cmake  External_CTKAPPLAUNCHER.cmake  External_Cppcheck.cmake  External_DTIProcess.cmake  External_ITKTransformTools.cmake  External_ITKv4.cmake  External_ResampleDTIlogEuclidean.cmake  External_SlicerExecutionModel.cmake  External_Uncrustify.cmake  External_VTK.cmake  External_python.cmake  External_python_customPython_configure.cmake.in  External_teem.cmake
Testing/: CMakeLists.txt  DTI-RegTest.cxx  itkDifferenceDiffusionTensor3DImageFilter.h  itkTestMainExtended.h
Testing/Data/Baseline/: ANTS-GreedyDiffeo-Baseline.nrrd.md5  BRAINS-Affine-Baseline.nrrd.md5
Testing/Data/Input/: AdultAtlas.nrrd.md5  AdultAtlas_BrainMask.nrrd.md5  AdultData_DWI_QCed_DTI.nrrd.md5  AdultData_DWI_QCed_DTI_mask.nrrd.md5
